--- a/dpc-aggregation/src/main/resources/application.conf
+++ b/dpc-aggregation/src/main/resources/application.conf
@@ -1,25 +1,35 @@
 dpc.aggregation {
-    bbclient {
-        keyStore {
-            type = "JKS"
-            defaultPassword = "changeit"
-            location = "../bbcerts/bb.keystore"
-        }
-
-        serverBaseUrl = "https://fhir.backend.bluebutton.hhsdevcloud.us/v1/fhir/"
+  bbclient {
+    keyStore {
+      type = "JKS"
+      defaultPassword = "changeit"
+      location = "../bbcerts/bb.keystore"
     }
 
-    server {
-        registerDefaultExceptionMappers = false
-        applicationConnectors = [{
-            type = http
-            port = 8080
-        }]
-        adminConnectors =  [{
-            type = http
-            port = 9999
-        }]
-    }
+    serverBaseUrl = "https://fhir.backend.bluebutton.hhsdevcloud.us/v1/fhir/"
+  }
 
-    exportPath = "/tmp"
+  database {
+    driverClass = org.postgresql.Driver
+    url = "jdbc:postgresql://localhost:5432/dpc_attribution"
+    user = postgres
+    password = dpc-safe
+    properties = {
+      "hibernate.hbm2ddl.auto" = update
+    }
+  }
+
+  server {
+    registerDefaultExceptionMappers = false
+    applicationConnectors = [{
+      type = http
+      port = 8080
+    }]
+    adminConnectors = [{
+      type = http
+      port = 9999
+    }]
+  }
+
+  exportPath = "/tmp"
 }
