--- a/dpc-attribution/src/main/resources/application.conf
+++ b/dpc-attribution/src/main/resources/application.conf
@@ -3,6 +3,7 @@ dpc.attribution {
     driverClass = org.postgresql.Driver
     url = "jdbc:postgresql://localhost:5432/dpc_attribution"
     user = postgres
+    password = dpc-safe
   }
 
   logging {
