DPC-94: Unified Dropwizard configuration
Dropwizard configuration is now specified in a unified server.conf file, we can override it when we need to.

--- a/dpc-aggregation/pom.xml
+++ b/dpc-aggregation/pom.xml
@@ -104,6 +104,17 @@
     </dependencies>
 
     <build>
+        <resources>
+            <resource>
+                <directory>${project.basedir}/../src/resources</directory>
+            </resource>
+            <resource>
+                <directory>${project.basedir}/../src/main/resources</directory>
+            </resource>
+            <resource>
+                <directory>src/main/resources</directory>
+            </resource>
+        </resources>
         <plugins>
             <plugin>
                 <artifactId>maven-shade-plugin</artifactId>
