--- a/dpc-aggregation/src/main/resources/application.conf
+++ b/dpc-aggregation/src/main/resources/application.conf
@@ -1,4 +1,6 @@
 dpc.aggregation {
+  include "server.conf"
+
   bbclient {
     keyStore {
       type = "JKS"
@@ -7,28 +9,6 @@ dpc.aggregation {
     }
 
     serverBaseUrl = "https://fhir.backend.bluebutton.hhsdevcloud.us/v1/fhir/"
-  }
-
-  database {
-    driverClass = org.postgresql.Driver
-    url = "jdbc:postgresql://localhost:5432/dpc_attribution"
-    user = postgres
-    password = dpc-safe
-    properties = {
-      "hibernate.hbm2ddl.auto" = update
-    }
-  }
-
-  server {
-    registerDefaultExceptionMappers = false
-    applicationConnectors = [{
-      type = http
-      port = 8080
-    }]
-    adminConnectors = [{
-      type = http
-      port = 9999
-    }]
   }
 
   exportPath = "/tmp"
