--- a/dpc-attribution/pom.xml
+++ b/dpc-attribution/pom.xml
@@ -92,6 +92,9 @@
                 <directory>${project.basedir}/../src/resources</directory>
             </resource>
             <resource>
+                <directory>${project.basedir}/../src/main/resources</directory>
+            </resource>
+            <resource>
                 <directory>src/main/resources</directory>
             </resource>
         </resources>
