--- a/dpc-attribution/src/main/resources/application.conf
+++ b/dpc-attribution/src/main/resources/application.conf
@@ -1,28 +1,6 @@
 dpc.attribution {
-  database {
-    driverClass = org.postgresql.Driver
-    url = "jdbc:postgresql://localhost:5432/dpc_attribution"
-    user = postgres
-    password = dpc-safe
-  }
 
-  logging {
-    loggers {
-      "gov.cms.dpc" = DEBUG
-    }
-  }
-
-  server {
-    registerDefaultExceptionMappers = false
-    applicationConnectors = [{
-      type = http
-      port = 3500
-    }]
-    adminConnectors = [{
-      type = http
-      port = 9999
-    }]
-  }
+  include "server.conf"
 
   expirationThreshold = 90 // In days
   sundial {
