DPC-94: Remove Hibernate migration from attribution service.

--- a/dpc-aggregation/src/main/resources/application.conf
+++ b/dpc-aggregation/src/main/resources/application.conf
@@ -1,6 +1,13 @@
 dpc.aggregation {
   include "server.conf"
 
+  database {
+    #
+    properties = {
+      "hibernate.hbm2ddl.auto" = update
+    }
+  }
+
   bbclient {
     keyStore {
       type = "JKS"
