--- a/dpc-api/src/main/resources/application.conf
+++ b/dpc-api/src/main/resources/application.conf
@@ -1,6 +1,12 @@
 dpc.api {
   include "server.conf"
 
+  database {
+    properties = {
+      "hibernate.hbm2ddl.auto" = update
+    }
+  }
+
   attributionURL = "http://localhost:3500/v1/"
   exportPath = "/tmp"
 
