DPC-94: Moved queue Hibernate migration into reference file.
The queue setup parameters are now fully stored in reference.conf.

--- a/dpc-queue/src/main/resources/reference.conf
+++ b/dpc-queue/src/main/resources/reference.conf
@@ -4,3 +4,10 @@ queue {
     address = "redis://localhost:6379"
   }
 }
+
+database {
+  properties = {
+    # Use Hibernate to setup the Job table in Postgres, this will eventually need to be removed
+    "hibernate.hbm2ddl.auto" = update
+  }
+}
