--- a/dpc-api/src/main/resources/application.conf
+++ b/dpc-api/src/main/resources/application.conf
@@ -1,36 +1,11 @@
-logging {
-  level = INFO
-}
+dpc.api {
+  include "server.conf"
 
-server {
-  registerDefaultExceptionMappers = false
-  applicationConnectors = [{
-    type = http
-    port = 3002
-  }]
-  adminConnectors =  [{
-    type = http
-    port = 9900
-  }]
-}
+  attributionURL = "http://localhost:3500/v1/"
+  exportPath = "/tmp"
 
-httpClient {
-  timeout: 5s
-  connectionRequestTimeout: 5s
-}
-
-queue {
-  singleServerConfig {
-    address = "redis://localhost:6379"
-  }
-}
-
-database {
-  driverClass = org.postgresql.Driver
-  url = "jdbc:postgresql://localhost:5432/dpc_attribution"
-  user = postgres
-  password = dpc-safe
-  properties = {
-    "hibernate.hbm2ddl.auto" = update
+  httpClient {
+    timeout: 5s
+    connectionRequestTimeout: 5s
   }
 }
