DPC-23: Skip javadoc generation for generated sources
We shouldn’t create Javadocs for JOOQ sources, this also fixes a bad javadoc in the Abstract upserter.

--- a/pom.xml
+++ b/pom.xml
@@ -227,6 +227,10 @@
                         <goals>
                             <goal>jar</goal>
                         </goals>
+                        <configuration>
+                            <!--Exclude generated sources, such as Jooq-->
+                            <excludePackageNames>gov.cms.dpc.attribution.dao</excludePackageNames>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
