DPC-163: Updated configuration files for integration tests
The docker compose scripts and ports are now configured correctly.

Integration test is back to passing.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,8 +36,8 @@ services:
     ports:
       - "3500:8080"
 
-  web:
-    image: dpc-web
+  api:
+    image: dpc-api
     ports:
       - "3002:3002"
     environment:
