--- a/.travis.yml
+++ b/.travis.yml
@@ -27,17 +27,26 @@ before_install:
 #  - psql -c 'create database dpc_attribution;' -U postgres
 
 after_script:
+  # Format the test results and copy to a new directory
+  - mkdir reports
+  - mvn jacoco:report
+    - |
+    for module in dpc-aggregation dpc-api dpc-attribution dpc-queue
+    do
+    JACOCO_SOURCE_PATH=./$module/src/main/java ./cc-test-reporter format-coverage ./$module/target/site/jacoco/jacoco.xml --input-type jacoco -o reports/codeclimate.unit.$module.json
+    done
   - docker-compose down
   - docker-compose up -d --scale api=0
+  - sleep 30
   # Run the integration-test profile, which only runs a subset of the tests
   - mvn test -Pintegration-tests -pl dpc-api
   - mvn jacoco:report
   - |
     for module in dpc-aggregation dpc-api dpc-attribution dpc-queue
     do
-      JACOCO_SOURCE_PATH=./$module/src/main/java ./cc-test-reporter format-coverage ./$module/target/site/jacoco/jacoco.xml --input-type jacoco
+        JACOCO_SOURCE_PATH=./$module/src/main/java ./cc-test-reporter format-coverage ./$module/target/site/jacoco/jacoco.xml --input-type jacoco -o reports/codeclimate.integration.$module.json
     done
 
-  - ./cc-test-reporter sum-coverage coverage/codeclimate.json
+  - ./cc-test-reporter sum-coverage reports/codeclimate.* coverage/codeclimate.json
   - ./cc-test-reporter upload-coverage
 
