DPC-206: Moved test resources into correct directory
All the common files should be under src/main/resources, not split between multiple directories.

--- a/dpc-api/pom.xml
+++ b/dpc-api/pom.xml
@@ -101,7 +101,7 @@
         <!--Pull in the attribution seeds so we can use them for the integration tests.-->
         <testResources>
             <testResource>
-                <directory>${project.basedir}/../src/resources</directory>
+                <directory>${project.basedir}/../src/main/resources</directory>
             </testResource>
         </testResources>
         <plugins>
