DPC-206: Add demo client and re-enable integration tests (#46)
* DPC-206: Fix API Service dependencies and Queue config location

The API service no longer depends on the aggregation service as a dependency.

Fixed queue configuration inclusion, it actually works now.

* DPC-163: Updated configuration files for integration tests

The docker compose scripts and ports are now configured correctly.

Integration test is back to passing.

* DPC-206: Demo client is now working correctly.

We can now start everything with docker-compose and run the demo against the fresh setup.

* DPC-206: Refactored export test code into helper class

We now have a class for sharing basic client functionality between the Demo command and the test code.

This also allows us to remove the ExportResponse class, since it largely duplicates the JobCompletionModel class. This does require ensuring that the JavaTimeModule() is registered with Jackson, which may be annoying.

* DPC-206: DemoCommand now uses the ClientUtils helpers

Migrated the DemoCommand to use the shared client methods, rather than its own duplicate copies.

* DPC-163: Add integration tests to Travis config

Once the install and main test phases have run, we startup the Docker-compose cluster and run just the integration tests for dpc-api

We also removed the Travis dependencies on redis and postgres, we simply use our own Docker containers.

* DPC-163: Manually disable Travis postgres

Prevent Travis from automatically starting Postgres, since we’re bringing our own instance.

* DPC-162: Setup integration test maven profile

Added a maven profile for only running the integration tests.

* DPC-162: Persist code coverage reports between test runs

Copy the jacoco reports out of the target dir, that way they can be summed up by code climate.

* DPC-162: Added truncate command to attribution service

Added an admin command to truncate the database so we can run our integration tests i

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,34 +7,43 @@ language: java
 jdk:
   - oraclejdk11
 
-addons:
-  postgresql: "9.6"
-
-services:
-  - postgresql
-  - redis-server
-
 cache:
   directories:
     - $HOME/.m2
 
-# Setup the postgres database for testing
-before_script:
-  - psql -c 'create database dpc_attribution;' -U postgres
-
 before_install:
+  - sudo /etc/init.d/postgresql stop
+  - docker-compose up -d db redis
   - wget https://codeclimate.com/downloads/test-reporter/test-reporter-0.6.3-linux-amd64 -O ./cc-test-reporter
   - chmod +x ./cc-test-reporter
   - ./cc-test-reporter before-build
 
+# Setup the postgres database for testing
+#before_script:
+#  - psql -c 'create database dpc_attribution;' -U postgres
+
 after_script:
+  # Format the test results and copy to a new directory
+  - mkdir reports
+  - mvn jacoco:report
+    - |
+    for module in dpc-aggregation dpc-api dpc-attribution dpc-queue
+    do
+    JACOCO_SOURCE_PATH=./$module/src/main/java ./cc-test-reporter format-coverage ./$module/target/site/jacoco/jacoco.xml --input-type jacoco -o reports/codeclimate.unit.$module.json
+    done
+  - ls reports
+  - docker-compose down
+  - docker-compose up -d --scale api=0
+  - sleep 30
+  # Run the integration-test profile, which only runs a subset of the tests
+  - mvn test -Pintegration-tests -pl dpc-api
   - mvn jacoco:report
   - |
     for module in dpc-aggregation dpc-api dpc-attribution dpc-queue
     do
-      JACOCO_SOURCE_PATH=./$module/src/main/java ./cc-test-reporter format-coverage ./$module/target/site/jacoco/jacoco.xml --input-type jacoco
+        JACOCO_SOURCE_PATH=./$module/src/main/java ./cc-test-reporter format-coverage ./$module/target/site/jacoco/jacoco.xml --input-type jacoco -o reports/codeclimate.integration.$module.json
     done
 
-  - ./cc-test-reporter sum-coverage coverage/codeclimate.json
+  - ./cc-test-reporter sum-coverage reports/codeclimate.* -o coverage/codeclimate.json
   - ./cc-test-reporter upload-coverage
 
