DPC-203: Move encryption parameters into config

--- a/dpc-aggregation/src/main/resources/application.conf
+++ b/dpc-aggregation/src/main/resources/application.conf
@@ -11,5 +11,13 @@ dpc.aggregation {
     serverBaseUrl = "https://fhir.backend.bluebutton.hhsdevcloud.us/v1/fhir/"
   }
 
+  encryption {
+    symmetricCipher = "AES/GCM/NoPadding"
+    asymmetricCipher = "RSA/ECB/PKCS1Padding"
+    keyBits = 128
+    gcmTagLength = 128
+    ivBits = 96 # GCM Salt SHALL be 12 bytes ref: RFC 5288, Sec 3
+  }
+
   exportPath = "/tmp"
 }
