--- a/dpc-aggregation/src/test/resources/test.application.conf
+++ b/dpc-aggregation/src/test/resources/test.application.conf
@@ -9,6 +9,14 @@ dpc.aggregation {
         serverBaseUrl = "http://localhost:1080/v1/fhir/"
       }
 
+      encryption {
+          symmetricCipher = "AES/GCM/NoPadding"
+          asymmetricCipher = "RSA/ECB/PKCS1Padding"
+          keyBits = 128
+          gcmTagLength = 128
+          ivBits = 96 # GCM Salt SHALL be 12 bytes ref: RFC 5288, Sec 3
+      }
+
       server {
           registerDefaultExceptionMappers = false
           applicationConnectors = [{
