DPC-216: Fix EOB resource checking
Generified the resource checking function. We should not the EOB resources are actually Bundles, so we need to check for the resource type, but cast to something different.

Travis should actually run tests now.

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,9 +24,10 @@ before_install:
 
 script:
   - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
+  - mvn test -B -V
   # Format the test results and copy to a new directory
-  - mkdir reports
   - mvn jacoco:report
+  - mkdir reports
   - |
     for module in dpc-aggregation dpc-api dpc-attribution dpc-queue
     do
