DPC-221: Updated docker tags and repositories for AWS
When building, we now create the images using the ECR repository and build each image as a unique tag.

--- a/dpc-aggregation/pom.xml
+++ b/dpc-aggregation/pom.xml
@@ -163,7 +163,10 @@
                 <artifactId>jib-maven-plugin</artifactId>
                 <configuration>
                     <to>
-                        <image>${project.artifactId}</image>
+                        <image>${jib.ecr.root}</image>
+                        <tags>
+                            <tag>dpc-aggregation</tag>
+                        </tags>
                     </to>
                     <extraDirectory>
                         <path>${project.basedir}/../bbcerts</path>
