--- a/dpc-api/pom.xml
+++ b/dpc-api/pom.xml
@@ -154,7 +154,10 @@
                 <artifactId>jib-maven-plugin</artifactId>
                 <configuration>
                     <to>
-                        <image>${project.artifactId}</image>
+                        <image>${jib.ecr.root}</image>
+                        <tags>
+                            <tag>dpc-api</tag>
+                        </tags>
                     </to>
                     <container>
                         <args>
