DPC-229: Added timeout and logging
Added a timeout call to try and exit the failing tests early.

Also added some more logging and dumped it to the Travis output.

--- a/dpc-aggregation/src/main/resources/dev.application.conf
+++ b/dpc-aggregation/src/main/resources/dev.application.conf
@@ -11,4 +11,11 @@ dpc.aggregation {
     }
   }
   exportPath = "/app/data"
+
+  logging {
+    loggers {
+      "gov.cms.dpc" = DEBUG
+      "org.hibernate.SQL" = TRACE
+    }
+  }
 }
