--- a/.travis.yml
+++ b/.travis.yml
@@ -38,7 +38,8 @@ script:
   - docker-compose up -d --scale api=0
   - sleep 30
   # Run the integration-test profile, which only runs a subset of the tests
-  - mvn test -Pintegration-tests -pl dpc-api
+  - timeout 300 mvn test -Pintegration-tests -pl dpc-api
+  - docker logs dpc-app_aggregation_1
   - mvn jacoco:report
   - |
     for module in dpc-aggregation dpc-api dpc-attribution dpc-queue
