DPC-229: All the debug logging
Log it all.

--- a/dpc-aggregation/src/main/resources/dev.application.conf
+++ b/dpc-aggregation/src/main/resources/dev.application.conf
@@ -13,6 +13,7 @@ dpc.aggregation {
   exportPath = "/app/data"
 
   logging {
+    level = DEBUG
     loggers {
       "gov.cms.dpc" = DEBUG
       "org.hibernate.SQL" = TRACE
