--- a/dpc-aggregation/src/main/resources/dev.application.conf
+++ b/dpc-aggregation/src/main/resources/dev.application.conf
@@ -15,6 +15,7 @@ dpc.aggregation {
   logging {
     level = DEBUG
     loggers {
+      "org.apache.http" = TRACE
       "gov.cms.dpc" = DEBUG
       "org.hibernate.SQL" = TRACE
     }
