--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ cache:
 before_install:
   - sudo /etc/init.d/postgresql stop
   - docker-compose up -d db redis
+  - openssl aes-256-cbc -K $encrypted_ebb4f1b65c80_key -iv $encrypted_ebb4f1b65c80_iv -in bbcerts/bb.keystore.enc -out bbcerts/bb.keystore -d
   - wget https://codeclimate.com/downloads/test-reporter/test-reporter-0.6.3-linux-amd64 -O ./cc-test-reporter
   - chmod +x ./cc-test-reporter
   - ./cc-test-reporter before-build
