DPC-229: Removed docker logging from travis
I think it’s working, but the logs are too big.

--- a/.travis.yml
+++ b/.travis.yml
@@ -38,8 +38,8 @@ script:
   - docker-compose up -d --scale api=0
   - sleep 30
   # Run the integration-test profile, which only runs a subset of the tests
-  - timeout 400 mvn test -Pintegration-tests -pl dpc-api
-  - docker logs dpcapp_aggregation_1
+  - mvn test -Pintegration-tests -pl dpc-api
+  #  - docker logs dpcapp_aggregation_1
   - mvn jacoco:report
   - |
     for module in dpc-aggregation dpc-api dpc-attribution dpc-queue
