--- a/src/main/resources/server.conf
+++ b/src/main/resources/server.conf
@@ -18,3 +18,10 @@ server {
     port = 9900
   }]
 }
+
+logging {
+  appenders = [{
+    type = console
+    logFormat = "%-5p [%d{ISO8601,UTC} - %t] %c: %m%n%rEx"
+  }]
+}
