--- a/.travis.yml
+++ b/.travis.yml
@@ -18,10 +18,6 @@ before_install:
   - chmod +x ./cc-test-reporter
   - ./cc-test-reporter before-build
 
-# Setup the postgres database for testing
-#before_script:
-#  - psql -c 'create database dpc_attribution;' -U postgres
-
 script:
   - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
   - mvn test -B -V
@@ -39,10 +35,9 @@ script:
   - sleep 30
   # Run the integration-test profile, which only runs a subset of the tests
   - mvn test -Pintegration-tests -pl dpc-api
-  - docker logs dpcapp_aggregation_1
   - mvn jacoco:report
   - |
-    for module in dpc-aggregation dpc-api dpc-attribution dpc-queue
+    for module in dpc-api
     do
       JACOCO_SOURCE_PATH=./$module/src/main/java ./cc-test-reporter format-coverage ./$module/target/site/jacoco/jacoco.xml --input-type jacoco -o reports/codeclimate.integration.$module.json
     done
