DPC-145: Refactored configuration injection for testing.
This is a bit messy, but we now have an optional constructor for manually building and injecting configuration settings.

--- a/dpc-aggregation/src/test/resources/test.application.conf
+++ b/dpc-aggregation/src/test/resources/test.application.conf
@@ -6,6 +6,12 @@ dpc.aggregation {
               location = "../bbcerts/bb.keystore"
           }
 
+        timeouts {
+          connectionTimeout: 5000 // ms
+          socketTimeout: 5000 // ms
+          requestTimeout: 5000 // ms
+        }
+
         serverBaseUrl = "http://localhost:7788/v1/fhir/"
       }
 
