DPC-145: RetryConfiguration is now configurable
We now inject a retry policy into the Aggregation Engine, which can we modify in the Guice module.

The EncryptingAggregation does not yet support this, but will when we merge DPC-230.

--- a/dpc-aggregation/src/main/resources/application.conf
+++ b/dpc-aggregation/src/main/resources/application.conf
@@ -16,6 +16,8 @@ dpc.aggregation {
     }
 
     serverBaseUrl = "https://fhir.backend.bluebutton.hhsdevcloud.us/v1/fhir/"
+
+    retryCount = 3 // Number of times to retry reach BB request
   }
   exportPath = "/tmp"
 }
