--- a/pom.xml
+++ b/pom.xml
@@ -321,6 +321,7 @@
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
+                <version>0.8.3</version>
                 <configuration>
                     <excludes>
                         <!--Exclude auto-generated JOOQ classes-->
