DPC-229: Fix failing Travis integration tests (#51)
* DPC-229: Added timeout and logging

* DPC-229: Configured http connection timeout

Modified the FHIR client factory to set the socket and connection wait timeouts.

* Trace logging

prepare for the drowning

* DPC-229: Add initial setup timeout

More things that could time out.

* DPC-229: Fix timeout and connection manager

Apparently, overriding values at the FHIR level and the connection manager level causes everything to break.

* DPC-146: Initial refactor of queue polling into reactive loop.

Really terrible copy-pasta of using RxJava and Resilience4j in order to improve our handling of export requests.

Right now, it runs, and it should automatically timeout and fail individual requests when something goes wrong.

* DPC-145: Removed old code and cleaned up logging.

Moved some really verbose log statements to the trace level.

Remove old imperative queue polling loop.

Modified default console logging to include the current thread name.

* DPC-229: Jacoco fixes

Since we’re running our tests using docker, we only get test execution data from the API service.

* DPC-145: Migrated client config into BB config

BlueButton client config is now integrated into the application config and injected into the correct module.

This means we can use normal Dropwizard utilities for making changes.

* DPC-145: Refactored configuration injection for testing.

This is a bit messy, but we now have an optional constructor for manually building and injecting configuration settings.

* DPC-145: Refactored queue functions to simply them and add testing

Addressed a code climate comment to refactor some of the aggregation functions.

Also added some basic java docs

Added a new AggregationEngineTest to verify that the retry logic is working correctly.

* DPC-145: RetryConfiguration is now configurable

We now inject a retry policy into the Aggregation Engine, which can we m

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,10 +18,6 @@ before_install:
   - chmod +x ./cc-test-reporter
   - ./cc-test-reporter before-build
 
-# Setup the postgres database for testing
-#before_script:
-#  - psql -c 'create database dpc_attribution;' -U postgres
-
 script:
   - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -Perror-prone -B -V
   - mvn test -B -V
@@ -41,7 +37,7 @@ script:
   - mvn test -Pintegration-tests -pl dpc-api
   - mvn jacoco:report
   - |
-    for module in dpc-aggregation dpc-api dpc-attribution dpc-queue
+    for module in dpc-api
     do
       JACOCO_SOURCE_PATH=./$module/src/main/java ./cc-test-reporter format-coverage ./$module/target/site/jacoco/jacoco.xml --input-type jacoco -o reports/codeclimate.integration.$module.json
     done
