--- a/dpc-aggregation/src/test/resources/test.application.conf
+++ b/dpc-aggregation/src/test/resources/test.application.conf
@@ -6,7 +6,13 @@ dpc.aggregation {
               location = "../bbcerts/bb.keystore"
           }
 
-        serverBaseUrl = "http://localhost:1080/v1/fhir/"
+        timeouts {
+          connectionTimeout: 5000 // ms
+          socketTimeout: 5000 // ms
+          requestTimeout: 5000 // ms
+        }
+
+        serverBaseUrl = "http://localhost:7788/v1/fhir/"
       }
 
       encryption {
@@ -30,7 +36,7 @@ dpc.aggregation {
       }
 
       test  {
-        mockServerPort = 1080
+        mockServerPort = 7788
       }
 
       exportPath = "/tmp"
