--- a/dpc-aggregation/src/main/resources/application.conf
+++ b/dpc-aggregation/src/main/resources/application.conf
@@ -9,7 +9,15 @@ dpc.aggregation {
       location = "../bbcerts/bb.keystore"
     }
 
+    timeouts {
+      connectionTimeout: 5000 // ms
+      socketTimeout: 5000 // ms
+      requestTimeout: 5000 // ms
+    }
+
     serverBaseUrl = "https://fhir.backend.bluebutton.hhsdevcloud.us/v1/fhir/"
+
+    retryCount = 3 // Number of times to retry reach BB request
   }
   exportPath = "/tmp"
 }
