DPC-224: Update docker tags and repositories
Each Docker image is now tagged with its own ECR repository. We also include tags for the latest code version and the current release (including Snapshots).

--- a/dpc-aggregation/pom.xml
+++ b/dpc-aggregation/pom.xml
@@ -174,9 +174,10 @@
                 <artifactId>jib-maven-plugin</artifactId>
                 <configuration>
                     <to>
-                        <image>${jib.ecr.root}</image>
+                        <image>${jib.ecr.root}/dpc-aggregation</image>
                         <tags>
-                            <tag>dpc-aggregation</tag>
+                            <tag>latest</tag>
+                            <tag>${project.version}</tag>
                         </tags>
                     </to>
                     <extraDirectory>
