--- a/dpc-api/pom.xml
+++ b/dpc-api/pom.xml
@@ -154,9 +154,10 @@
                 <artifactId>jib-maven-plugin</artifactId>
                 <configuration>
                     <to>
-                        <image>${jib.ecr.root}</image>
+                        <image>${jib.ecr.root}/dpc-api</image>
                         <tags>
-                            <tag>dpc-api</tag>
+                            <tag>latest</tag>
+                            <tag>${project.version}</tag>
                         </tags>
                     </to>
                     <container>
