DPC-242: Maven properties can now be injected into the application
Added a PropertiesProvider that we can inject into various services and get access to some maven properties at runtime.

We now match the build date and version with what Maven says is correct.

--- a/dpc-api/pom.xml
+++ b/dpc-api/pom.xml
@@ -96,6 +96,7 @@
             </resource>
             <resource>
                 <directory>src/main/resources</directory>
+                <filtering>true</filtering>
             </resource>
         </resources>
         <!--Pull in the attribution seeds so we can use them for the integration tests.-->
