DPC-242: Fix timestamp formatting
Worked around a maven bug which prevents the timestamp from being directly referenced in properties files.

Updated the timestamp formatter to work with the new date format.

--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
         <java.version>11</java.version>
         <jib.container.appRoot>/app</jib.container.appRoot>
         <jib.ecr.root>430398651479.dkr.ecr.us-east-1.amazonaws.com</jib.ecr.root>
+        <timestamp>${maven.build.timestamp}</timestamp>
     </properties>
 
     <dependencyManagement>
