--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,12 @@
             <email>gina.m.maini@omb.eop.gov</email>
             <organization>United States Digital Service</organization>
         </developer>
+        <developer>
+            <id>rick</id>
+            <name>Rick Hawes</name>
+            <email>richard.m.hawes@omb.eop.gov</email>
+            <organization>United States Digital Service</organization>
+        </developer>
     </developers>
 
     <dependencyManagement>
