--- a/dpc-attribution/pom.xml
+++ b/dpc-attribution/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>dpc-app</artifactId>
         <groupId>gov.cms.dpc</groupId>
-        <version>0.2.0-SNAPSHOT</version>
+        <version>0.2.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -64,7 +64,7 @@
         <dependency>
             <groupId>gov.cms.dpc</groupId>
             <artifactId>dpc-common</artifactId>
-            <version>0.2.0-SNAPSHOT</version>
+            <version>0.2.0</version>
         </dependency>
         <!--Testing dependencies-->
         <dependency>
