DPC-246: Initial BBClient refactor
BlueButton client is now refactored into its own module. Everything compiles, but I’m sure it doesn’t run yet.

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <module>dpc-aggregation</module>
         <module>dpc-attribution</module>
         <module>dpc-common</module>
+        <module>dpc-bluebutton</module>
     </modules>
 
     <groupId>gov.cms.dpc</groupId>
