--- a/dpc-aggregation/pom.xml
+++ b/dpc-aggregation/pom.xml
@@ -14,7 +14,6 @@
 
     <properties>
         <mainClass>gov.cms.dpc.aggregation.DPCAggregationService</mainClass>
-        <mockserverVersion>3.10.8</mockserverVersion>
         <resilience4j.version>0.14.1</resilience4j.version>
     </properties>
 
@@ -53,6 +52,12 @@
         <dependency>
             <groupId>gov.cms.dpc</groupId>
             <artifactId>dpc-common</artifactId>
+            <version>0.3.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>gov.cms.dpc</groupId>
+            <artifactId>dpc-bluebutton</artifactId>
             <version>0.3.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
@@ -100,18 +105,6 @@
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/org.mock-server/mockserver-core -->
-        <dependency>
-            <groupId>org.mock-server</groupId>
-            <artifactId>mockserver-netty</artifactId>
-            <version>${mockserverVersion}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.mock-server</groupId>
-            <artifactId>mockserver-client-java</artifactId>
-            <version>${mockserverVersion}</version>
-        </dependency>
-
     </dependencies>
 
     <build>
