--- a/dpc-bluebutton/pom.xml
+++ b/dpc-bluebutton/pom.xml
@@ -10,6 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>dpc-bluebutton</artifactId>
+    <name>DPC BlueButton Interaction Client</name>
 
     <properties>
         <mockserverVersion>3.10.8</mockserverVersion>
