DPC-12: Attribution Check now uses a Group resource
We’ve unified the method signatures around the FHIR group resource. Tests are passing and the API feels much cleaner.

--- a/dpc-attribution/src/main/resources/application.conf
+++ b/dpc-attribution/src/main/resources/application.conf
@@ -6,4 +6,10 @@ dpc.attribution {
   sundial {
     annotated-jobs-package-name = gov.cms.dpc.attribution.jobs
   }
+
+  logging {
+    loggers {
+      "org.jooq" = TRACE
+    }
+  }
 }
