DPC-13: Expanded org resource test
Added a negative test to the organization resource endpoint.

Modified travis file to clean install as the first step, to avoid any caching issues.

Registration Command now outputs to the stderr when there's a problem.

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ before_install:
   - ./cc-test-reporter before-build
 
 script:
-  - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -Perror-prone -B -V
+  - mvn clean install -DskipTests=true -Dmaven.javadoc.skip=true -Perror-prone -B -V
   - mvn test -B -V
   # Format the test results and copy to a new directory
   - mvn jacoco:report
