--- a/dpc-aggregation/src/main/resources/application.conf
+++ b/dpc-aggregation/src/main/resources/application.conf
@@ -18,5 +18,7 @@ dpc.aggregation {
     serverBaseUrl = "https://fhir.backend.bluebutton.hhsdevcloud.us/v1/fhir/"
   }
   retryCount = 3 // Number of times to retry reach BB request
+  resourcesPerFile = 1000 // Max number of resources that a export file will have before creating a new file
+  resourcesPerRequest = 100 // Max number of resource that a request to BB will return before using another request
   exportPath = "/tmp"
 }
