DPC-266: Restrict application building to only Java 11
Added a Maven enforcer rule which checks that only Java 11 is used to build the application.

Also updated the README to be more explicit about both the building process, but also the running and testing flows as well.

--- a/pom.xml
+++ b/pom.xml
@@ -373,6 +373,9 @@
                                 <requireMavenVersion>
                                     <version>[3.0.0,4.0.0)</version>
                                 </requireMavenVersion>
+                                <requireJavaVersion>
+                                    <version>[11]</version>
+                                </requireJavaVersion>
                             </rules>
                         </configuration>
                     </execution>
