DPC-266: Fix maven version range
Apparently, 11.0 does not expand to include patch release, so now we restrict up to Java 12.

--- a/pom.xml
+++ b/pom.xml
@@ -374,7 +374,7 @@
                                     <version>[3.0.0,4.0.0)</version>
                                 </requireMavenVersion>
                                 <requireJavaVersion>
-                                    <version>[11]</version>
+                                    <version>[11,12)</version>
                                 </requireJavaVersion>
                             </rules>
                         </configuration>
